[package]
name = "actix-governor"
version = "0.3.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2018"
description = "A rate-limiting middleware for actix-web backed by the governor crate"
repository = "https://github.com/AaronErhardt/actix-governor"
readme = "README.md"
license = "GPL-3.0-or-later"

keywords = ["actix", "rate-limit", "governor"]
categories = ["web-programming::http-server"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.13", default-features = false }
actix-http = "=3.0.0-beta.15" # temporary
futures = "0.3"
governor = "0.3"
log = { version = "0.4", optional = true }

[dev-dependencies]
actix-rt = "2.5"

[features]
logger = ["log"]
