[package]
name = "actix-governor"
version = "0.8.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
description = "A rate-limiting middleware for actix-web backed by the governor crate"
repository = "https://github.com/AaronErhardt/actix-governor"
readme = "README.md"
license = "GPL-3.0-or-later"

keywords = ["actix", "rate-limit", "governor"]
categories = ["web-programming::http-server"]

[dependencies]
actix-web = { version = "4", default-features = false }
actix-http = "3"
futures = "0.3"
governor = "0.8.0"
log = { version = "0.4", optional = true }

[dev-dependencies]
actix-rt = "2.10"
actix-web = { version = "4", features = ["macros"] }
serde = { version = "1.0.213",  features = ["derive"] }

[features]
logger = ["log"]
